--- a/index.html
+++ b/index.html
@@ -2,16 +2,80 @@
 <html>
 <body>
 
-<h1>WILLIAM IS THE BEST</h1>
+<h1> All ur bases belongz 2 me </h1>
 
-<p>Four score and seven years ago our fathers brought forth on this continent, a new nation, conceived in Liberty, and dedicated to the proposition that all men are created equal.
+<p>"Bohemian Rhapsody"
 
-Now we are engaged in a great civil war, testing whether that nation, or any nation so conceived and so dedicated, can long endure. We are met on a great battle-field of that war. We have come to dedicate a portion of that field, as a final resting place for those who here gave their lives that that nation might live. It is altogether fitting and proper that we should do this.
+Is this the real life?
+Is this just fantasy?
+Caught in a landslide,
+No escape from reality.
 
-But, in a larger sense, we can not dedicate -- we can not consecrate -- we can not hallow -- this ground. The brave men, living and dead, who struggled here, have consecrated it, far above our poor power to add or detract. The world will little note, nor long remember what we say here, but it can never forget what they did here. It is for us the living, rather, to be dedicated here to the unfinished work which they who fought here have thus far so nobly advanced. It is rather for us to be here dedicated to the great task remaining before us -- that from these honored dead we take increased devotion to that cause for which they gave the last full measure of devotion -- that we here highly resolve that these dead shall not have died in vain -- that this nation, under God, shall have a new birth of freedom -- and that government of the people, by the people, for the people, shall not perish from the earth.
+Open your eyes,
+Look up to the skies and see,
+I'm just a poor boy, I need no sympathy,
+Because I'm easy come, easy go,
+Little high, little low,
+Anyway the wind blows doesn't really matter to me, to me.
 
-Abraham Lincoln
-November 19, 1863.</p>
+Mama, just killed a man,
+Put a gun against his head,
+Pulled my trigger, now he's dead.
+Mama, life had just begun,
+But now I've gone and thrown it all away.
+
+Mama, ooh,
+Didn't mean to make you cry,
+If I'm not back again this time tomorrow,
+Carry on, carry on as if nothing really matters.
+
+Too late, my time has come,
+Sends shivers down my spine,
+Body's aching all the time.
+Goodbye, everybody, I've got to go,
+Gotta leave you all behind and face the truth.
+
+Mama, ooh (anyway the wind blows),
+I don't wanna die,
+I sometimes wish I'd never been born at all.
+
+I see a little silhouetto of a man,
+Scaramouche, Scaramouche, will you do the Fandango?
+Thunderbolt and lightning,
+Very, very frightening me.
+(Galileo) Galileo.
+(Galileo) Galileo,
+Galileo Figaro
+Magnifico.
+
+I'm just a poor boy and nobody loves me.
+He's just a poor boy from a poor family,
+Spare him his life from this monstrosity.
+
+Easy come, easy go, will you let me go?
+Bismillah! No, we will not let you go. (Let him go!)
+Bismillah! We will not let you go. (Let him go!)
+Bismillah! We will not let you go. (Let me go!)
+Will not let you go. (Let me go!)
+Never, never let you go
+Never let me go, oh.
+No, no, no, no, no, no, no.
+Oh, mama mia, mama mia (Mama mia, let me go.)
+Beelzebub has a devil put aside for me, for me, for me.
+
+So you think you can stone me and spit in my eye?
+So you think you can love me and leave me to die?
+Oh, baby, can't do this to me, baby,
+Just gotta get out, just gotta get right outta here.
+
+(Oh, yeah, oh yeah)
+
+Nothing really matters,
+Anyone can see,
+Nothing really matters,
+Nothing really matters to me.
+
+Anyway the wind blows.</p>
 
 </body>
 </html>
