--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1> All ur bases belongz 2 me </h1>
 
-<p>"Bohemian Rhapsody"
+<pre>"Bohemian Rhapsody"
 
 Is this the real life?
 Is this just fantasy?
@@ -75,7 +75,7 @@ Anyone can see,
 Nothing really matters,
 Nothing really matters to me.
 
-Anyway the wind blows.</p>
+Anyway the wind blows.</pre>
 
 </body>
 </html>
