Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,81 +1,90 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
+  <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
+
+  <title>Wammiltich.github.io</title>
+  <meta name="description" content="">
+
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+</head>
+
 <body>
 
-<h1> All ur bases belongz 2 me </h1>
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Wammiltich.github.io</h1>
+    </header>
+    <div id="container">
+      <p class="tagline"></p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/wammiltich" class="code">View Wammiltich.github.io on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h3>
+<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<pre>"Bohemian Rhapsody"
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-Is this the real life?
-Is this just fantasy?
-Caught in a landslide,
-No escape from reality.
+<pre><code>$ cd your_repo_root/repo_name
+$ git fetch origin
+$ git checkout gh-pages
+</code></pre>
 
-Open your eyes,
-Look up to the skies and see,
-I'm just a poor boy, I need no sympathy,
-Because I'm easy come, easy go,
-Little high, little low,
-Anyway the wind blows doesn't really matter to me, to me.
+<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
-Mama, just killed a man,
-Put a gun against his head,
-Pulled my trigger, now he's dead.
-Mama, life had just begun,
-But now I've gone and thrown it all away.
+<h3>
+<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-Mama, ooh,
-Didn't mean to make you cry,
-If I'm not back again this time tomorrow,
-Carry on, carry on as if nothing really matters.
+<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
 
-Too late, my time has come,
-Sends shivers down my spine,
-Body's aching all the time.
-Goodbye, everybody, I've got to go,
-Gotta leave you all behind and face the truth.
+<h3>
+<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
 
-Mama, ooh (anyway the wind blows),
-I don't wanna die,
-I sometimes wish I'd never been born at all.
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
 
-I see a little silhouetto of a man,
-Scaramouche, Scaramouche, will you do the Fandango?
-Thunderbolt and lightning,
-Very, very frightening me.
-(Galileo) Galileo.
-(Galileo) Galileo,
-Galileo Figaro
-Magnifico.
+<h3>
+<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-I'm just a poor boy and nobody loves me.
-He's just a poor boy from a poor family,
-Spare him his life from this monstrosity.
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
-Easy come, easy go, will you let me go?
-Bismillah! No, we will not let you go. (Let him go!)
-Bismillah! We will not let you go. (Let him go!)
-Bismillah! We will not let you go. (Let me go!)
-Will not let you go. (Let me go!)
-Never, never let you go
-Never let me go, oh.
-No, no, no, no, no, no, no.
-Oh, mama mia, mama mia (Mama mia, let me go.)
-Beelzebub has a devil put aside for me, for me, for me.
+<h3>
+<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-So you think you can stone me and spit in my eye?
-So you think you can love me and leave me to die?
-Oh, baby, can't do this to me, baby,
-Just gotta get out, just gotta get right outta here.
+<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+        </article>
+      </div>
+    </div>
+    <footer>
+      <div class="owner">
 
-(Oh, yeah, oh yeah)
+      <p><a href="https://github.com/wammiltich" class="avatar"><img src="https://1.gravatar.com/avatar/7d3be1987216fd22deabb4339c9d2d49?d=https%3A%2F%2Fidenticons.github.com%2F2b241295dfefa54e3083020766e10791.png&amp;r=x&amp;s=60" width="48" height="48"/></a>View <a href="https://github.com/wammiltich">wammiltich</a> on <a href="https://www.github.com">GitHub</a></p>
 
-Nothing really matters,
-Anyone can see,
-Nothing really matters,
-Nothing really matters to me.
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="http://pages.github.com/">GitHub Pages</a><br/>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/wammiltich/wammiltich.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/wammiltich/wammiltich.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
 
-Anyway the wind blows.</pre>
-
+  
 </body>
 </html>
