--- a/index.html
+++ b/index.html
@@ -37,21 +37,22 @@
           <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>William is the BESTT</p>
+<p>People assume that time is a strict progression of cause to effect, but *actually* from a non-linear, non-subjective viewpoint - it's more like a big ball of wibbly wobbly... time-y wimey... stuff.</p>
 
 
 
-<p>wammiltich is betterest than actulyizdolan</p>
+<p> Don't blink. Blink and you're dead. They are fast. Faster than you can believe. Don't turn your back. Don't look away. And don't blink. Good Luck.</p>
 
 
-<p>wow such website</p>
+<p>“You want weapons? We’re in a library! Books! The best weapons in the world!”</p>
 
 
-<p>very github</p>
+<p>“Amy Pond, there’s something you’d better understand about me ‘cause it’s important, and one day your life may depend on it: I am definitely a mad man with a box!” </p>
 
  
 
-<p>html6 wow</p>
+<p>“We’re all stories, in the end. Just make it a good one, eh?”
+— The Doctor, Season 5, Episode 13</p>
         </article>
       </div>
     </div>
