--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
 </head>
+We all have alittle bit too much time
 
 <body>
-
   <div class="wrapper">
     <header>
       <h1 class="title">William's Site</h1>
