--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
 </head>
-We all have alittle bit too much time
+We all have alittle bit too much time on our hands
 
 <body>
   <div class="wrapper">
