--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@ We all have alittle bit too much time on our hands
 <p> Don't blink. Blink and you're dead. They are fast. Faster than you can believe. Don't turn your back. Don't look away. And don't blink. Good Luck.</p>
 
 
-<p>“You want weapons? We’re in a library! Books! The best weapons in the world!”</p>
+<p>You want weapons? We’re in a library! Books! The best weapons in the world!</p>
 
 
-<p>“Amy Pond, there’s something you’d better understand about me ‘cause it’s important, and one day your life may depend on it: I am definitely a mad man with a box!” </p>
+<p>Amy Pond, there’s something you’d better understand about me ‘cause it’s important, and one day your life may depend on it: I am definitely a mad man with a box! </p>
 
  
 
-<p>“We’re all stories, in the end. Just make it a good one, eh?”
+<p>We’re all stories, in the end. Just make it a good one, eh?
 </p>
         </article>
       </div>
