--- a/index.html
+++ b/index.html
@@ -37,21 +37,29 @@
           <h3>
 
 
+
+
+
+
+
+
+
+
 <p>People assume that time is a strict progression of cause to effect, but *actually* from a non-linear, non-subjective viewpoint - it's more like a big ball of wibbly wobbly... time-y wimey... stuff.</p>
+<p> - The Doctor </p>
 
-
-<p>Don't blink. Blink and you're dead. They are fast. Faster than you can believe. Don't turn your back. Don't look away. And don't blink. Good Luck.</p>
-
-
-<p>You want weapons? We’re in a library! Books! The best weapons in the world!</p>
-
-
-<p>Amy Pond, there’s something you’d better understand about me ‘cause it’s important, and one day your life may depend on it: I am definitely a mad man with a box! </p>
-
-<p>We’re all stories, in the end. Just make it a good one, eh?
+<p>You can follow me on Tumblr here (not that you want to but it'd be totally rad) :
+  thetourisover.tumblr.com
 </p>
 
-<p> - The Doctor </p>
+<p>I really dont know what to do with this site</p>
+
+
+
+
+
+
+
 
         </article>
       </div>
