--- a/index.html
+++ b/index.html
@@ -57,7 +57,261 @@
 
 <STYLE>#qp_main55536 .qp_btna:hover input {background:rgb(150,150,150)!important}</STYLE><div id="qp_main55536" style="border-radius:6px;border:1px solid rgb(150,150,150);margin:0px;padding:10px;padding-bottom:2px;background:rgb(255,255,255)"><div style="border-radius:6px;font-family:Arial;font-size:12px;font-weight:bold;background-color:rgb(44,44,44);color:rgb(255,255,255);margin-bottom:10px"><div style="padding:10px">Isn't William cooler than izactualydolan ?</div></div><form id="qp_form55536" action="http://www.poll-maker.com/results55536x023F66C0-3" method="post" target="_blank" style="display:inline;margin:0px;padding:0px"><div style="border-radius:6px"><div style="display:block;font-family:Arial;font-size:12px;color:rgb(0,0,0);padding-top:5px;padding-bottom:5px;clear:both;cursor:pointer;cursor:hand"><span onClick="if((!event.target?event.srcElement:event.target).tagName!='INPUT'){var c=this.childNodes[0];c.checked=(c.type=='radio'?true:!c.checked);}" style="display:block;padding-left:30px"><input style="float:left;width:25px;margin-left:-25px;margin-top:-1px;padding:0px;height:18px" name="qp_v55536" type="radio" value="1">Yes</span></div><div style="display:block;font-family:Arial;font-size:12px;color:rgb(0,0,0);padding-top:5px;padding-bottom:5px;clear:both;cursor:pointer;cursor:hand"><span onClick="if((!event.target?event.srcElement:event.target).tagName!='INPUT'){var c=this.childNodes[0];c.checked=(c.type=='radio'?true:!c.checked);}" style="display:block;padding-left:30px"><input style="float:left;width:25px;margin-left:-25px;margin-top:-1px;padding:0px;height:18px" name="qp_v55536" type="radio" value="2">Very yes</span></div><div style="display:block;font-family:Arial;font-size:12px;color:rgb(0,0,0);padding-top:5px;padding-bottom:5px;clear:both;cursor:pointer;cursor:hand"><span onClick="if((!event.target?event.srcElement:event.target).tagName!='INPUT'){var c=this.childNodes[0];c.checked=(c.type=='radio'?true:!c.checked);}" style="display:block;padding-left:30px"><input style="float:left;width:25px;margin-left:-25px;margin-top:-1px;padding:0px;height:18px" name="qp_v55536" type="radio" value="3">I'm stupid</span></div></div><div style="padding-top:10px;clear:both"><a class="qp_btna" href="#"><input name="qp_b55536" style="width:80px;height:30px;margin-right:5px;border-radius:10px;border:1px solid rgb(150,150,150);font-family:Arial;font-size:12px;font-weight:bold;color:rgb(0,0,0);cursor:pointer;cursor:hand;background:rgb(200,200,200)" type="submit" value="Vote"></a><a class="qp_btna" href="#"><input name="qp_b55536" style="width:80px;height:30px;margin-right:5px;border-radius:10px;border:1px solid rgb(150,150,150);font-family:Arial;font-size:12px;font-weight:bold;color:rgb(0,0,0);cursor:pointer;cursor:hand;background:rgb(200,200,200)" type="submit" value="Results"></a></div><a id="qp_a55536" style="float:right;font-family:Arial;font-size:10px;color:rgb(0,0,0);text-decoration:none;margin-top:-12px;margin-right:-5px" href="http://www.poll-maker.com">Poll Maker</a></form></div><script src="http://scripts.poll-maker.com/3012/scpolls.js" language="javascript"></script>
 
-
+<pre>William Amos Hough High School
+Honor Code
+The objective
+honor code system
+is to instill in students values that will reinforce conducting
+themselves with integrity. It is
+Hough
+’s desire that the spirit of the Honor Code become a
+guiding force in the life of every student. For such a system to be effective, every member of the
+school community
+—
+students, parents, faculty, and staff
+—
+must believe in and support its
+principles.
+In order to ensure that freedom and integrity prevail at
+Hough High School
+, students, parents,
+faculty, and staff accept the responsibility of upholding an honor system. We believe that an
+atmosphere of truth is basic to the system of cooperation and mutua
+l respect on which
+Hough
+High School is founded
+. While attending
+Hough High School
+, each student must realize the
+importance of personal honesty.
+The
+Hough High School honor code
+is the following:
+Each student is honor
+-
+bound to refrain
+from cheating, ly
+ing or misrepresenting the truth, and stealing.
+1.
+Cheating
+: Cheating is giving, receiving, or attempting to give or receive unauthorized
+help that could result in an unfair advantage in completing work. The student is to
+assume that all work is to be do
+ne individually unless the teacher specifies that
+collaboration is acceptable. Cheating includes plagiarism. Plagiarism is the action of
+presenting others’ work, words, or ideas as their own.
+All Hough High s
+tudents are
+expected to turn in their own w
+ork.
+Examples ofcheating may include, but not be limited to:
+Copying information or answers from someone else’s work, homework,
+projects, reports, essays, quizzes or test papers.
+Allowing others to copy your work or doing their work for them, i.e. giving
+another student your homework to copy.
+Turning in an assignment that was meant to be done individually, but that does
+not reflect an individual effort.
+Giving or taking assistance of any kind while taking a quiz or test. This
+includes talking or gesturin
+g during the examination period.
+Using unauthorized aids such as cheat sheets, notes, books, formulas or
+information in calculators or computers.
+Discussing a quiz or test with someone who has not taken the quiz or test.
+Direct copying of key phrases from
+another source.
+Direct copying of key phrases from another source with minor adjustments such
+as changing verb tense or word order.
+Using another person’s ideas or arguments without proper citation.
+2.
+Lying or Misrepresenting the Truth.
+Lying is the falsif
+ication or denial of fact,
+consciously making a false statement with the intent to deceive, or the breaking of a
+pledge to a representative of the school. Misrepresenting the truth is giving an unfaithful
+account of, or distorting the truth or perpetuatin
+g a false impression. Misrepresentation
+may occur without explicit lying.
+Examples lying or misrepresenting the truth may include, but not be limited to:
+Missing class for any purpose other than your stated reason.
+Denying fault or responsibility for even
+ts in which you were a participant.
+Covering or lying for another student when they violate the honor code.
+3.
+Stealing:
+Stealing is the taking of anything without the expressed consent of the owner.
+Examples ofcheating may include, but not be limited to:
+Stealing copies of tests or quizzes.
+Stealing another person’s property.
+Stealing another student’s homework, notes or notebook.
+Helping someone else to lie, misrepresent the truth, cheat, or steal may be an honor offense. All
+homework assignments, essays
+and papers, laboratory reports, quizzes, tests, examinations, and
+other exercises are considered to be an individual’s work except when a teacher has given other
+explicit instructions about collaboration.
+All school
+community member
+s agree
+to this pled
+ge:
+1.
+I understand the seriousness of an infraction of the Honor Code, which addresses
+cheating, lying, misrepresenting the truth, and stealing.
+2. I agree to abide by the
+Hough High School
+honor system.
+Every faculty member must, and parents and
+students should, when aware of an infraction of the
+Honor Code, report the infraction. Students are encouraged to remind each other of the
+importance of obeying the Honor Code.
+Honor offenses must be determined beyond a reasonable doubt to meet the follo
+wing three
+criteria:
+1)
+Did the offense occur?
+2)
+Was the offense substantial?
+3)
+Was the offense intentional?
+It is the student’s responsibility to understand our academic policies. We make every effort to
+clarify the guidelines for students and families.
+Students cannot defend themselves by claiming
+that they didn’t mean to violate these policies. Students who do not take the time to understand
+our policies are in effect demonstrating that they intended to violate them.
+A student cannot claim ignorance
+as a way to justify an honor code allegation. Use the following
+scenarios to better understand when a student crosses the line and commits an honor offense.
+Scenario 1:
+A teacher gives an individual assignment to view a video and write a particular
+pape
+r. Two students decide to watch the movie together and each of them takes notes. Then,
+they take turns typing sentences onto a single laptop until they’ve created a rough draft for a
+paper. Each of them creates a modified version from the rough draft an
+d submits them
+independently. They had no idea that what they did could be considered cheating. Would this
+be an honor offense?
+Answer:
+Yes, it is an honor code violation.
+Our default policy is that all work is to be done independently unless otherw
+ise
+instructed.
+In this particular case, it would have been permissible for the students to watch the video
+and even discuss it. However, any and all writing should be done independently.
+Editing the rough draft and turning in different versions is not
+independent writing.
+Scenario 2:
+A teacher assigns a research project. The student uses the Internet to find
+information. She finds several paragraphs that would be perfect to use for her paper. But, she
+knows she is not allowed to “copy.” So, she decides to paraphrase these paragrap
+hs by changing
+as many words as she is able to, deleting some sentences, adding a sentence, and even changing
+the order of some sentences. She turns the paper in and, at the end of the paper, she simply cites
+the Internet website that she used. When accu
+sed of an honor offense, she said she didn’t mean
+to cheat and that is why she went through all the trouble of re
+-
+wording most of the paragraphs.
+Would this be an honor offense?
+Answer:
+Yes, it is an honor code violation. It is permissible to use variou
+s sources; however,
+they must be properly documented.
+The problem with this particular case is two
+-
+fold.
+o
+First, the student did not write a paper. She essentially copied one and did not
+create a product on her own. Cutting and pasting other people’s
+paragraphs even
+if they are heavily paraphrased does not count as writing one’s own paper.
+o
+Second, the student plagiarized by passing these ideas off as her own. In rare
+instances, a student may want to use an entire paragraph that someone else wrote.
+However, the student must footnote the entire paragraph to indicate that. If parts
+are lifted verbatim, those are put into direct quotations. If parts are heavily
+paraphrased, they are still footnoted either by sentence or at the very end of the
+paragra
+ph. In this case, the student simply used a blanket footnote at the end of
+the paper which did not accurately reflect the extent to which the site was so
+heavily utilized.
+What about the fact that she said it was unintentional?
+o
+The claim that she didn’t mean to cheat does not absolve her from intentionality.
+All
+Hough
+students are thoroughly schooled on our honor and academic policies
+and they even sign off on them. We do continual education in this area. Beyond
+that, the stud
+ents are the ones who must seek clarity when needed. A student who
+intends to follow the Honor Code is someone who takes all necessary steps to
+gain that clarity. Otherwise, a student intends to take his chances.
+What are some techniques a student can us
+e to avoid getting into the paraphrasing trap to
+begin with?
+o
+If a student has a webpage (or a book) opened up and is toggling back and forth
+between that information and the original paper she is trying to write, it is next to
+impossible to write a legitim
+ate paper, for she can’t help but be influenced by the
+sentences and words that are already written and the temptation is to try to
+paraphrase everything, one sentence at a time.
+o
+One approach that we teach our students is to read the information thoroughly
+and
+to think about what it means. Then, close the webpage (or shut the book) and
+begin to write. That way, the student’s words will be original and the ideas will
+tend to be fresh as well, especially any analysis that is done. Then, the student
+would s
+till cite the information used. However, in doing it that way, the research
+becomes a tool that was used to create a student
+-
+driven product rather than simply
+finding existing prose and essentially passing it off as one’s own.
+Proposed Honor Code Conseq
+uences
+Violations of the Honor Code accumulate throughout the student’s high school career.
+Informal Violation (assignments that fall under the informal grading category)
+1
+st
+offense
+-
+Student receives a zero on the assignment with no opportunity to make i
+t up for a
+grade. Student can submit work for feedback from the teacher. Incident recorded in student’s
+discipline record with a warning.
+2
+nd
+offense
+-
+Student receives a zero on the assignment with no opportunity to make it up for a
+grade. Student can sub
+mit work for feedback from the teacher. Student and parent will meet
+with teacher and administrator. Incident recorded in student’s discipline record with a warning
+and parent conference.
+3
+rd
+offense
+-
+Student receives a zero on the assignment with no oppo
+rtunity to make it up for a
+grade. Student can submit work for feedback from the teacher. Incident recorded in student’s
+discipline record and student receives one day of ISS.
+Formal Violation (assignments that fall under the formal grading category)
+1
+st
+-
+Student receives a zero on the assignment with no opportunity to make it up for a grade.
+Student can submit work for feedback from the teacher. Student and parent will meet with
+teacher and administrator. Incident recorded in student’s discipline record
+with a warning and
+parent conference.
+2
+nd
+-
+Student receives a zero on the assignment with no opportunity to make it up for a grade.
+Student can submit work for feedback from the teacher. Incident recorded in student’s discipline
+record and student receive
+s two days of ISS.
+</pre>
         </article>
       </div>
     </div>
