--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <STYLE>#qp_main55536 .qp_btna:hover input {background:rgb(150,150,150)!important}</STYLE><div id="qp_main55536" style="border-radius:6px;border:1px solid rgb(150,150,150);margin:0px;padding:10px;padding-bottom:2px;background:rgb(255,255,255)"><div style="border-radius:6px;font-family:Arial;font-size:12px;font-weight:bold;background-color:rgb(44,44,44);color:rgb(255,255,255);margin-bottom:10px"><div style="padding:10px">Isn't William cooler than izactualydolan ?</div></div><form id="qp_form55536" action="http://www.poll-maker.com/results55536x023F66C0-3" method="post" target="_blank" style="display:inline;margin:0px;padding:0px"><div style="border-radius:6px"><div style="display:block;font-family:Arial;font-size:12px;color:rgb(0,0,0);padding-top:5px;padding-bottom:5px;clear:both;cursor:pointer;cursor:hand"><span onClick="if((!event.target?event.srcElement:event.target).tagName!='INPUT'){var c=this.childNodes[0];c.checked=(c.type=='radio'?true:!c.checked);}" style="display:block;padding-left:30px"><input style="float:left;width:25px;margin-left:-25px;margin-top:-1px;padding:0px;height:18px" name="qp_v55536" type="radio" value="1">Yes</span></div><div style="display:block;font-family:Arial;font-size:12px;color:rgb(0,0,0);padding-top:5px;padding-bottom:5px;clear:both;cursor:pointer;cursor:hand"><span onClick="if((!event.target?event.srcElement:event.target).tagName!='INPUT'){var c=this.childNodes[0];c.checked=(c.type=='radio'?true:!c.checked);}" style="display:block;padding-left:30px"><input style="float:left;width:25px;margin-left:-25px;margin-top:-1px;padding:0px;height:18px" name="qp_v55536" type="radio" value="2">Very yes</span></div><div style="display:block;font-family:Arial;font-size:12px;color:rgb(0,0,0);padding-top:5px;padding-bottom:5px;clear:both;cursor:pointer;cursor:hand"><span onClick="if((!event.target?event.srcElement:event.target).tagName!='INPUT'){var c=this.childNodes[0];c.checked=(c.type=='radio'?true:!c.checked);}" style="display:block;padding-left:30px"><input style="float:left;width:25px;margin-left:-25px;margin-top:-1px;padding:0px;height:18px" name="qp_v55536" type="radio" value="3">I'm stupid</span></div></div><div style="padding-top:10px;clear:both"><a class="qp_btna" href="#"><input name="qp_b55536" style="width:80px;height:30px;margin-right:5px;border-radius:10px;border:1px solid rgb(150,150,150);font-family:Arial;font-size:12px;font-weight:bold;color:rgb(0,0,0);cursor:pointer;cursor:hand;background:rgb(200,200,200)" type="submit" value="Vote"></a><a class="qp_btna" href="#"><input name="qp_b55536" style="width:80px;height:30px;margin-right:5px;border-radius:10px;border:1px solid rgb(150,150,150);font-family:Arial;font-size:12px;font-weight:bold;color:rgb(0,0,0);cursor:pointer;cursor:hand;background:rgb(200,200,200)" type="submit" value="Results"></a></div><a id="qp_a55536" style="float:right;font-family:Arial;font-size:10px;color:rgb(0,0,0);text-decoration:none;margin-top:-12px;margin-right:-5px" href="http://www.poll-maker.com">Poll Maker</a></form></div><script src="http://scripts.poll-maker.com/3012/scpolls.js" language="javascript"></script>
 
-<pre>William Amos Hough High School
+<p>William Amos Hough High School
 Honor Code
 The objective
 honor code system
@@ -212,106 +212,44 @@ to cheat and that is why she went through all the trouble of re
 wording most of the paragraphs.
 Would this be an honor offense?
 Answer:
-Yes, it is an honor code violation. It is permissible to use variou
-s sources; however,
-they must be properly documented.
-The problem with this particular case is two
--
-fold.
-o
-First, the student did not write a paper. She essentially copied one and did not
-create a product on her own. Cutting and pasting other people’s
-paragraphs even
-if they are heavily paraphrased does not count as writing one’s own paper.
-o
-Second, the student plagiarized by passing these ideas off as her own. In rare
-instances, a student may want to use an entire paragraph that someone else wrote.
-However, the student must footnote the entire paragraph to indicate that. If parts
-are lifted verbatim, those are put into direct quotations. If parts are heavily
-paraphrased, they are still footnoted either by sentence or at the very end of the
-paragra
-ph. In this case, the student simply used a blanket footnote at the end of
-the paper which did not accurately reflect the extent to which the site was so
-heavily utilized.
-What about the fact that she said it was unintentional?
-o
-The claim that she didn’t mean to cheat does not absolve her from intentionality.
-All
-Hough
-students are thoroughly schooled on our honor and academic policies
-and they even sign off on them. We do continual education in this area. Beyond
-that, the stud
-ents are the ones who must seek clarity when needed. A student who
-intends to follow the Honor Code is someone who takes all necessary steps to
-gain that clarity. Otherwise, a student intends to take his chances.
-What are some techniques a student can us
-e to avoid getting into the paraphrasing trap to
-begin with?
-o
-If a student has a webpage (or a book) opened up and is toggling back and forth
-between that information and the original paper she is trying to write, it is next to
-impossible to write a legitim
-ate paper, for she can’t help but be influenced by the
-sentences and words that are already written and the temptation is to try to
-paraphrase everything, one sentence at a time.
-o
-One approach that we teach our students is to read the information thoroughly
-and
-to think about what it means. Then, close the webpage (or shut the book) and
+Yes, it is an honor code violation. It is permissible to use various sources; however,they must be properly documented. The problem with this particular case is two First, the student did not write a paper. She essentially copied one and did not
+create a product on her own. Cutting and pasting other people’s paragraphs even if they are heavily paraphrased does not count as writing one’s own paper.Second, the student plagiarized by passing these ideas off as her own. In rare instances, a student may want to use an entire paragraph that someone else wrote. However, the student must footnote the entire paragraph to indicate that. If parts are lifted verbatim, those are put into direct quotations. If parts are heavily paraphrased, they are still footnoted either by sentence or at the very end of the
+paragraph. In this case, the student simply used a blanket footnote at the end of the paper which did not accurately reflect the extent to which the site was so heavily utilized. What about the fact that she said it was unintentional? The claim that she didn’t mean to cheat does not absolve her from intentionality. All Hough students are thoroughly schooled on our honor and academic policies and they even sign off on them. We do continual education in this area. Beyond that, the students are the ones who must seek clarity when needed. A student who intends to follow the Honor Code is someone who takes all necessary steps to gain that clarity. Otherwise, a student intends to take his chances.What are some techniques a student can use to avoid getting into the paraphrasing trap to begin with? If a student has a webpage (or a book) opened up and is toggling back and forth between that information and the original paper she is trying to write, it is next to
+impossible to write a legitimate paper, for she can’t help but be influenced by the sentences and words that are already written and the temptation is to try to
+paraphrase everything, one sentence at a time.One approach that we teach our students is to read the information thoroughly
+and to think about what it means. Then, close the webpage (or shut the book) and
 begin to write. That way, the student’s words will be original and the ideas will
 tend to be fresh as well, especially any analysis that is done. Then, the student
-would s
-till cite the information used. However, in doing it that way, the research
+would still cite the information used. However, in doing it that way, the research
 becomes a tool that was used to create a student
--
 driven product rather than simply
 finding existing prose and essentially passing it off as one’s own.
 Proposed Honor Code Conseq
 uences
 Violations of the Honor Code accumulate throughout the student’s high school career.
 Informal Violation (assignments that fall under the informal grading category)
-1
-st
-offense
--
 Student receives a zero on the assignment with no opportunity to make i
 t up for a
 grade. Student can submit work for feedback from the teacher. Incident recorded in student’s
 discipline record with a warning.
-2
-nd
-offense
--
 Student receives a zero on the assignment with no opportunity to make it up for a
 grade. Student can sub
 mit work for feedback from the teacher. Student and parent will meet
 with teacher and administrator. Incident recorded in student’s discipline record with a warning
 and parent conference.
-3
-rd
-offense
--
 Student receives a zero on the assignment with no oppo
 rtunity to make it up for a
 grade. Student can submit work for feedback from the teacher. Incident recorded in student’s
 discipline record and student receives one day of ISS.
-Formal Violation (assignments that fall under the formal grading category)
-1
-st
--
-Student receives a zero on the assignment with no opportunity to make it up for a grade.
+Formal Violation (assignments that fall under the formal grading category)Student receives a zero on the assignment with no opportunity to make it up for a grade.
 Student can submit work for feedback from the teacher. Student and parent will meet with
 teacher and administrator. Incident recorded in student’s discipline record
 with a warning and
-parent conference.
-2
-nd
--
-Student receives a zero on the assignment with no opportunity to make it up for a grade.
+parent conference.Student receives a zero on the assignment with no opportunity to make it up for a grade.
 Student can submit work for feedback from the teacher. Incident recorded in student’s discipline
 record and student receive
 s two days of ISS.
-</pre>
+</p>
         </article>
       </div>
     </div>
